--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -15,10 +15,11 @@
             app:srcCompat = "@drawable/menu"
             />
     </LinearLayout>
+
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="match_parent"
-        android:layout_height="193dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:srcCompat="@drawable/uit_logo" />
     <TextView
         android:layout_width="match_parent"
