--- a/app/src/main/res/menu/teacher_bottom_navigation.xml
+++ b/app/src/main/res/menu/teacher_bottom_navigation.xml
@@ -3,17 +3,14 @@
 
     <item
         android:id="@+id/home_menu"
-        android:icon="@drawable/home"
-        android:title="@string/title_home" />
+        android:icon="@drawable/home"/>
 
     <item
         android:id="@+id/attendance_menu"
-        android:icon="@drawable/attendance"
-        android:title="@string/title_attendance" />
+        android:icon="@drawable/attendance" />
 
     <item
         android:id="@+id/profile_menu"
-        android:icon="@drawable/account"
-        android:title="@string/title_profile" />
+        android:icon="@drawable/account"/>
 
 </menu>
