--- a/app/src/main/res/drawable/attendance.xml
+++ b/app/src/main/res/drawable/attendance.xml
@@ -1,4 +1,4 @@
-<vector android:height="@dimen/iconSize1" android:tint="#000000"
+<vector android:height="@dimen/iconSize1" android:tint="@color/attendance"
     android:viewportHeight="24" android:viewportWidth="24"
     android:width="@dimen/iconSize1" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="@android:color/white" android:pathData="M21,3H3C1.9,3 1,3.9 1,5v8h2V5h18v16c1.1,0 2,-0.9 2,-2V5C23,3.9 22.1,3 21,3z"/>
