--- a/app/src/main/res/drawable/home.xml
+++ b/app/src/main/res/drawable/home.xml
@@ -1,4 +1,4 @@
-<vector android:height="@dimen/iconSize1" android:tint="#000000"
+<vector android:height="@dimen/iconSize1" android:tint="@color/teal_700"
     android:viewportHeight="24" android:viewportWidth="24"
     android:width="@dimen/iconSize1" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="@android:color/white" android:pathData="M10,20v-6h4v6h5v-8h3L12,3 2,12h3v8z"/>
