get my profile from firebase db

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name = "iconSize1">50dp</dimen>
-    <dimen name = "textSize1">20dp</dimen>
-    <dimen name = "margin1">15dp</dimen>
+    <dimen name="iconSize1">50dp</dimen>
+    <dimen name="textSize1">20dp</dimen>
+    <dimen name="margin1">15dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
