--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,7 +6,6 @@
     android:background="@drawable/back_ground"
     android:orientation="vertical">
 
-
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -76,28 +75,6 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/department"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/tvDepartment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textSize="24sp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingLeft="50dp"
-        android:paddingRight="50dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="@string/position"
             android:textSize="16sp" />
 
@@ -117,6 +94,15 @@
         android:layout_gravity="right"
         android:layout_margin="10dp"
         android:text="@string/logout"
+        android:textSize="12sp" />
+
+    <Button
+        android:id="@+id/btnResetPW"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:layout_margin="10dp"
+        android:text="@string/reset_password"
         android:textSize="12sp" />
 
 </LinearLayout>
