--- a/app/src/main/res/layout/activity_list_members.xml
+++ b/app/src/main/res/layout/activity_list_members.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListMembers">
+    tools:context=".Activities.ListMembersActivity">
 
     <Button
         android:id="@+id/btnAddNhanVien"
