--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -74,7 +74,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Email"
+            android:text="@string/position"
             android:textSize="20sp" />
 
         <TextView
@@ -82,7 +82,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
-            android:text="nguyen@gmail.com"
             android:textSize="24sp" />
 
     </LinearLayout>
@@ -98,21 +97,20 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Salary"
+            android:text="Gender"
             android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/salary"
+            android:id="@+id/Gender"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
-            android:text="20000000"
             android:textSize="24sp" />
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingLeft="50dp"
         android:paddingRight="50dp"
