--- a/app/src/main/res/layout/list_item_nhanvien.xml
+++ b/app/src/main/res/layout/list_item_nhanvien.xml
@@ -10,10 +10,9 @@
         android:id="@+id/imageViewAvatar"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@mipmap/ic_launcher"
-        android:scaleType="centerCrop"
         android:contentDescription="Avatar"
-        />
+        android:scaleType="centerCrop"
+        android:src="@mipmap/ic_launcher" />
 
     <LinearLayout
         android:layout_width="0dp"
