--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -3,14 +3,12 @@
 
     <item
         android:id="@+id/home_menu"
-        android:icon="@drawable/ic_home"/>
-
-    <item
-        android:id="@+id/attendance_menu"
-        android:icon="@drawable/ic_attendance" />
+        android:icon="@drawable/ic_home"
+        android:title="@string/title_home" />
 
     <item
         android:id="@+id/profile_menu"
-        android:icon="@drawable/ic_account"/>
+        android:icon="@drawable/ic_account"
+        android:title="@string/title_profile"/>
 
 </menu>
