--- a/app/src/main/res/layout/list_item_nhanvien.xml
+++ b/app/src/main/res/layout/list_item_nhanvien.xml
@@ -1,6 +1,6 @@
 <!-- res/layout/list_item_nhanvien.xml -->
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/llParent"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
